--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
 
 
     <link rel="stylesheet" href="StyleSheet2.css" />
-    <meta charset="windows-1251" />
+    <meta charset="utf-8 />
     <title>Gameworld</title>
     <style type="text/css">
     </style>
@@ -48,13 +48,13 @@
                 <div class="collapse navbar-collapse" id="responsivemenu">
                     <ul class="nav navbar-nav menu">
                         <li>
-                            <a href=news.html>Новости</a>
+                            <a href=news.html>ГЌГ®ГўГ®Г±ГІГЁ</a>
                         </li>
                         <li>
-                            <a href=#>Топ-20 лучших игр</a>
+                            <a href=#>Г’Г®ГЇ-20 Г«ГіГ·ГёГЁГµ ГЁГЈГ°</a>
                         </li>
                         <li>
-                            <a href=soundtracks.html>Саундтреки</a>
+                            <a href=soundtracks.html>Г‘Г ГіГ­Г¤ГІГ°ГҐГЄГЁ</a>
                         </li>
                     </ul>
                 </div>
@@ -65,7 +65,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 hidden-sm hidden-xs">
-                <p style="font-family: Helvetica, sans-serif;font-weight:700;font-size:100px;color:white;text-shadow:10px 5px 3px black;text-align:center;margin-top:100px">НОВОСТИ</p>
+                <p style="font-family: Helvetica, sans-serif;font-weight:700;font-size:100px;color:white;text-shadow:10px 5px 3px black;text-align:center;margin-top:100px">ГЌГЋГ‚ГЋГ‘Г’Г€</p>
             </div>
         </div>
     </div>
@@ -77,52 +77,52 @@
                 <div class="row">
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="247216_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">Анонсирован шутер Crazy Justice с полной разрушаемостью</b></p>
-                        <p style="margin-top:20px;margin-bottom:50px;"><b>Студия Black Riddles Studios анонсирована шутер Crazy Justice , построенный на технологии NVIDIAs PhysX. Это означает, что в игре можно..</b></p>
+                        <p><b style="color:yellow;font-size:20px;">ГЂГ­Г®Г­Г±ГЁГ°Г®ГўГ Г­ ГёГіГІГҐГ° Crazy Justice Г± ГЇГ®Г«Г­Г®Г© Г°Г Г§Г°ГіГёГ ГҐГ¬Г®Г±ГІГјГѕ</b></p>
+                        <p style="margin-top:20px;margin-bottom:50px;"><b>Г‘ГІГіГ¤ГЁГї Black Riddles Studios Г Г­Г®Г­Г±ГЁГ°Г®ГўГ Г­Г  ГёГіГІГҐГ° Crazy Justice , ГЇГ®Г±ГІГ°Г®ГҐГ­Г­Г»Г© Г­Г  ГІГҐГµГ­Г®Г«Г®ГЈГЁГЁ NVIDIAs PhysX. ГќГІГ® Г®Г§Г­Г Г·Г ГҐГІ, Г·ГІГ® Гў ГЁГЈГ°ГҐ Г¬Г®Г¦Г­Г®..</b></p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="221939_w180.jpg" style="float:left;  width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;"> Red Dead Redemption, Persona 5, Demon's Souls и Dante's Inferno запустили на PC в разрешении 4K</b></p>
+                        <p><b style="color:yellow;font-size:20px;"> Red Dead Redemption, Persona 5, Demon's Souls ГЁ Dante's Inferno Г§Г ГЇГіГ±ГІГЁГ«ГЁ Г­Г  PC Гў Г°Г Г§Г°ГҐГёГҐГ­ГЁГЁ 4K</b></p>
                         <p style="margin-top:20px;margin-bottom:28px;">
                             <b>
-                                В сети появилось наглядное подтверждение, что современные компьютеры могут запускать консольные эксклюзивы
-                                в очень высоком разрешении 4K. При этом...
+                                Г‚ Г±ГҐГІГЁ ГЇГ®ГїГўГЁГ«Г®Г±Гј Г­Г ГЈГ«ГїГ¤Г­Г®ГҐ ГЇГ®Г¤ГІГўГҐГ°Г¦Г¤ГҐГ­ГЁГҐ, Г·ГІГ® Г±Г®ГўГ°ГҐГ¬ГҐГ­Г­Г»ГҐ ГЄГ®Г¬ГЇГјГѕГІГҐГ°Г» Г¬Г®ГЈГіГІ Г§Г ГЇГіГ±ГЄГ ГІГј ГЄГ®Г­Г±Г®Г«ГјГ­Г»ГҐ ГЅГЄГ±ГЄГ«ГѕГ§ГЁГўГ»
+                                Гў Г®Г·ГҐГ­Гј ГўГ»Г±Г®ГЄГ®Г¬ Г°Г Г§Г°ГҐГёГҐГ­ГЁГЁ 4K. ГЏГ°ГЁ ГЅГІГ®Г¬...
                             </b>
                         </p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="247021_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">Самый первый прототип игры The Witcher показали на видео</b></p>
+                        <p><b style="color:yellow;font-size:20px;">Г‘Г Г¬Г»Г© ГЇГҐГ°ГўГ»Г© ГЇГ°Г®ГІГ®ГІГЁГЇ ГЁГЈГ°Г» The Witcher ГЇГ®ГЄГ Г§Г Г«ГЁ Г­Г  ГўГЁГ¤ГҐГ®</b></p>
 
-                        <p style="margin-top:20px;margin-bottom:50px;"><b>В сети было опубликовано видео с первым прототипом игры The Witcher , которая так и не была выпущена. На видео попало более 10 минут из ранней...</b></p>
+                        <p style="margin-top:20px;margin-bottom:50px;"><b>Г‚ Г±ГҐГІГЁ ГЎГ»Г«Г® Г®ГЇГіГЎГ«ГЁГЄГ®ГўГ Г­Г® ГўГЁГ¤ГҐГ® Г± ГЇГҐГ°ГўГ»Г¬ ГЇГ°Г®ГІГ®ГІГЁГЇГ®Г¬ ГЁГЈГ°Г» The Witcher , ГЄГ®ГІГ®Г°Г Гї ГІГ ГЄ ГЁ Г­ГҐ ГЎГ»Г«Г  ГўГ»ГЇГіГ№ГҐГ­Г . ГЌГ  ГўГЁГ¤ГҐГ® ГЇГ®ГЇГ Г«Г® ГЎГ®Г«ГҐГҐ 10 Г¬ГЁГ­ГіГІ ГЁГ§ Г°Г Г­Г­ГҐГ©...</b></p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="221939_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">Red Dead Redemption, Persona 5, Demon's Souls и Dante's Inferno запустили на PC в разрешении 4K</b></p>
+                        <p><b style="color:yellow;font-size:20px;">Red Dead Redemption, Persona 5, Demon's Souls ГЁ Dante's Inferno Г§Г ГЇГіГ±ГІГЁГ«ГЁ Г­Г  PC Гў Г°Г Г§Г°ГҐГёГҐГ­ГЁГЁ 4K</b></p>
                         <p style="margin-top:20px;margin-bottom:28px;">
                             <b>
-                                В сети появилось наглядное подтверждение, что современные компьютеры могут запускать консольные эксклюзивы
-                                в очень высоком разрешении 4K. При этом...
+                                Г‚ Г±ГҐГІГЁ ГЇГ®ГїГўГЁГ«Г®Г±Гј Г­Г ГЈГ«ГїГ¤Г­Г®ГҐ ГЇГ®Г¤ГІГўГҐГ°Г¦Г¤ГҐГ­ГЁГҐ, Г·ГІГ® Г±Г®ГўГ°ГҐГ¬ГҐГ­Г­Г»ГҐ ГЄГ®Г¬ГЇГјГѕГІГҐГ°Г» Г¬Г®ГЈГіГІ Г§Г ГЇГіГ±ГЄГ ГІГј ГЄГ®Г­Г±Г®Г«ГјГ­Г»ГҐ ГЅГЄГ±ГЄГ«ГѕГ§ГЁГўГ»
+                                Гў Г®Г·ГҐГ­Гј ГўГ»Г±Г®ГЄГ®Г¬ Г°Г Г§Г°ГҐГёГҐГ­ГЁГЁ 4K. ГЏГ°ГЁ ГЅГІГ®Г¬...
                             </b>
                         </p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="221939_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">Red Dead Redemption, Persona 5, Demon's Souls и Dante's Inferno запустили на PC в разрешении 4K</b></p>
+                        <p><b style="color:yellow;font-size:20px;">Red Dead Redemption, Persona 5, Demon's Souls ГЁ Dante's Inferno Г§Г ГЇГіГ±ГІГЁГ«ГЁ Г­Г  PC Гў Г°Г Г§Г°ГҐГёГҐГ­ГЁГЁ 4K</b></p>
                         <p style="margin-top:20px;margin-bottom:28px;">
                             <b>
-                                В сети появилось наглядное подтверждение, что современные компьютеры могут запускать консольные эксклюзивы
-                                в очень высоком разрешении 4K. При этом...
+                                Г‚ Г±ГҐГІГЁ ГЇГ®ГїГўГЁГ«Г®Г±Гј Г­Г ГЈГ«ГїГ¤Г­Г®ГҐ ГЇГ®Г¤ГІГўГҐГ°Г¦Г¤ГҐГ­ГЁГҐ, Г·ГІГ® Г±Г®ГўГ°ГҐГ¬ГҐГ­Г­Г»ГҐ ГЄГ®Г¬ГЇГјГѕГІГҐГ°Г» Г¬Г®ГЈГіГІ Г§Г ГЇГіГ±ГЄГ ГІГј ГЄГ®Г­Г±Г®Г«ГјГ­Г»ГҐ ГЅГЄГ±ГЄГ«ГѕГ§ГЁГўГ»
+                                Гў Г®Г·ГҐГ­Гј ГўГ»Г±Г®ГЄГ®Г¬ Г°Г Г§Г°ГҐГёГҐГ­ГЁГЁ 4K. ГЏГ°ГЁ ГЅГІГ®Г¬...
                             </b>
                         </p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12" ; style="margin-bottom:2px;">
                         <img src="221939_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">Red Dead Redemption, Persona 5, Demon's Souls и Dante's Inferno запустили на PC в разрешении 4K</b></p>
+                        <p><b style="color:yellow;font-size:20px;">Red Dead Redemption, Persona 5, Demon's Souls ГЁ Dante's Inferno Г§Г ГЇГіГ±ГІГЁГ«ГЁ Г­Г  PC Гў Г°Г Г§Г°ГҐГёГҐГ­ГЁГЁ 4K</b></p>
                         <p style="margin-top:20px;margin-bottom:28px;">
                             <b>
-                                В сети появилось наглядное подтверждение, что современные компьютеры могут запускать консольные эксклюзивы
-                                в очень высоком разрешении 4K. При этом...
+                                Г‚ Г±ГҐГІГЁ ГЇГ®ГїГўГЁГ«Г®Г±Гј Г­Г ГЈГ«ГїГ¤Г­Г®ГҐ ГЇГ®Г¤ГІГўГҐГ°Г¦Г¤ГҐГ­ГЁГҐ, Г·ГІГ® Г±Г®ГўГ°ГҐГ¬ГҐГ­Г­Г»ГҐ ГЄГ®Г¬ГЇГјГѕГІГҐГ°Г» Г¬Г®ГЈГіГІ Г§Г ГЇГіГ±ГЄГ ГІГј ГЄГ®Г­Г±Г®Г«ГјГ­Г»ГҐ ГЅГЄГ±ГЄГ«ГѕГ§ГЁГўГ»
+                                Гў Г®Г·ГҐГ­Гј ГўГ»Г±Г®ГЄГ®Г¬ Г°Г Г§Г°ГҐГёГҐГ­ГЁГЁ 4K. ГЏГ°ГЁ ГЅГІГ®Г¬...
                             </b>
                         </p>
                     </div>
@@ -133,9 +133,9 @@
     <div class="container-fluid" style="height:50px;margin-top:10px; background:rgba(0, 0, 0, 0.3);text-align:center; padding-top:20px;color:white;">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                Тадра Александр Николаевич
-                ФИТ
-                ПОИБМС - 7
+                Г’Г Г¤Г°Г  ГЂГ«ГҐГЄГ±Г Г­Г¤Г° ГЌГЁГЄГ®Г«Г ГҐГўГЁГ·
+                Г”Г€Г’
+                ГЏГЋГ€ГЃГЊГ‘ - 7
             </div>
         </div>
     </div>
