--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
 
 
     <link rel="stylesheet" href="StyleSheet2.css" />
-    <meta charset="utf-8 />
+    <meta charset="utf-8" />
     <title>Gameworld</title>
     <style type="text/css">
     </style>
