--- a/1/index.html
+++ b/1/index.html
@@ -30,7 +30,7 @@
         setInterval("clock()", 1000);
     </script>
     </head>
-    <body class="container-fluid">
+    <body class="container-fluid" style="background-color:rgb(68,68,68)">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/bootstrap.js"></script>           
             <div class="container" style="position:fixed;z-index:10;width:98%">
