--- a/1/news.html
+++ b/1/news.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/StyleSheet2.css" />
-    <meta charset="windows-1251" />
+    <meta charset="utf-8" />
     <title>Gameworld</title>
     <script type="text/javascript">
         function clock() {
@@ -16,16 +16,16 @@
             var min = d.getMinutes();
             var sec = d.getSeconds();
 
-            var mnt = new Array("января", "февраля", "марта", "апреля", "мая",
-                "июня", "июля", "августа", "сентября", "октября", "ноября", "декабря");
+            var mnt = new Array("СЏРЅРІР°СЂСЏ", "С„РµРІСЂР°Р»СЏ", "РјР°СЂС‚Р°", "Р°РїСЂРµР»СЏ", "РјР°СЏ",
+                "РёСЋРЅСЏ", "РёСЋР»СЏ", "Р°РІРіСѓСЃС‚Р°", "СЃРµРЅС‚СЏР±СЂСЏ", "РѕРєС‚СЏР±СЂСЏ", "РЅРѕСЏР±СЂСЏ", "РґРµРєР°Р±СЂСЏ");
 
             if (day <= 9) day = "0" + day;
             if (hrs <= 9) hrs = "0" + hrs;
             if (min <= 9) min = "0" + min;
             if (sec <= 9) sec = "0" + sec;
 
-            $("#time").html("Сейчас: " + hrs + ":" + min + ":" + sec + "&nbsp;&nbsp;&nbsp;" +
-                day + "-го " + mnt[d.getMonth()] + " " + d.getFullYear() + " г.");
+            $("#time").html("РЎРµР№С‡Р°СЃ: " + hrs + ":" + min + ":" + sec + "&nbsp;&nbsp;&nbsp;" +
+                day + "-РіРѕ " + mnt[d.getMonth()] + " " + d.getFullYear() + " Рі.");
         }
         setInterval("clock()", 1000);
     </script>
@@ -53,22 +53,22 @@
                 <div class="collapse navbar-collapse" id="responsivemenu">
                     <ul class="nav navbar-nav menu">
                         <li>
-                            <a href=index.html>Главная</a>
+                            <a href=index.html>Р“Р»Р°РІРЅР°СЏ</a>
                         </li>
                         <li>
-                            <a href=news.html>Новости</a>
+                            <a href=news.html>РќРѕРІРѕСЃС‚Рё</a>
                         </li>
                         <li>
-                            <a href=top.html>Топ-20 лучших игр</a>
+                            <a href=top.html>РўРѕРї-20 Р»СѓС‡С€РёС… РёРіСЂ</a>
                         </li>
                         <li>
-                            <a href=soundtracks.html>Саундтреки</a>
+                            <a href=soundtracks.html>РЎР°СѓРЅРґС‚СЂРµРєРё</a>
                         </li>
                         <li>
-                            <a href="xml/list.xml">Обо мне</a>
+                            <a href="xml/list.xml">РћР±Рѕ РјРЅРµ</a>
                         </li>
                     </ul>
-                    <span style="font-size:20px;color:white" id="time">Дата и время</span>
+                    <span style="font-size:20px;color:white" id="time">Р”Р°С‚Р° Рё РІСЂРµРјСЏ</span>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 hidden-sm hidden-xs">
-                <p style="font-family: Helvetica, sans-serif;font-weight:700;font-size:100px;color:white;text-shadow:10px 5px 3px black;text-align:center;margin-top:100px">НОВОСТИ</p>
+                <p style="font-family: Helvetica, sans-serif;font-weight:700;font-size:100px;color:white;text-shadow:10px 5px 3px black;text-align:center;margin-top:100px">РќРћР’РћРЎРўР</p>
             </div>
         </div>
     </div>
@@ -89,52 +89,52 @@
                 <div class="row">
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="images/254351_w180.jpg" style="float:left;  width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">На видео показали, как выглядит игра в стилистике S.T.A.L.K.E.R. на движке CryEngine в 4К</b></p>
+                        <p><b style="color:yellow;font-size:20px;">РќР° РІРёРґРµРѕ РїРѕРєР°Р·Р°Р»Рё, РєР°Рє РІС‹РіР»СЏРґРёС‚ РёРіСЂР° РІ СЃС‚РёР»РёСЃС‚РёРєРµ S.T.A.L.K.E.R. РЅР° РґРІРёР¶РєРµ CryEngine РІ 4Рљ</b></p>
                         <p style="margin-top:20px;margin-bottom:28px;">
                             <b>
-                                В новом видео продемонстрировали, как выглядела бы игра в стилистике S.T.A.L.K.E.R., которую воссоздали на движке CryEngine, на примере уровня из игры Survarium от Vostok Games.
-                                Пользователь с YouTube поделился видеозаписью, на которой демонстрируется совершенно новый взгляд на игру Survarium.
-                                RedSurvarium показал в 4К, как выглядит полностью переработанный уровень игры на движке CryEngine V.
-                                Скорее всего игроки никогда не смогут проверить это собственноручно, ведь сам проект, вдохновленный играми S.T.A.L.K.E.R. разрабатывается на игровом движке Vostok Engine, однако, всегда интересно взглянуть, как выглядели бы игры, даже самые современные, если бы они были воссозданы на совершенно других движках.
+                                Р’ РЅРѕРІРѕРј РІРёРґРµРѕ РїСЂРѕРґРµРјРѕРЅСЃС‚СЂРёСЂРѕРІР°Р»Рё, РєР°Рє РІС‹РіР»СЏРґРµР»Р° Р±С‹ РёРіСЂР° РІ СЃС‚РёР»РёСЃС‚РёРєРµ S.T.A.L.K.E.R., РєРѕС‚РѕСЂСѓСЋ РІРѕСЃСЃРѕР·РґР°Р»Рё РЅР° РґРІРёР¶РєРµ CryEngine, РЅР° РїСЂРёРјРµСЂРµ СѓСЂРѕРІРЅСЏ РёР· РёРіСЂС‹ Survarium РѕС‚ Vostok Games.
+                                РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ СЃ YouTube РїРѕРґРµР»РёР»СЃСЏ РІРёРґРµРѕР·Р°РїРёСЃСЊСЋ, РЅР° РєРѕС‚РѕСЂРѕР№ РґРµРјРѕРЅСЃС‚СЂРёСЂСѓРµС‚СЃСЏ СЃРѕРІРµСЂС€РµРЅРЅРѕ РЅРѕРІС‹Р№ РІР·РіР»СЏРґ РЅР° РёРіСЂСѓ Survarium.
+                                RedSurvarium РїРѕРєР°Р·Р°Р» РІ 4Рљ, РєР°Рє РІС‹РіР»СЏРґРёС‚ РїРѕР»РЅРѕСЃС‚СЊСЋ РїРµСЂРµСЂР°Р±РѕС‚Р°РЅРЅС‹Р№ СѓСЂРѕРІРµРЅСЊ РёРіСЂС‹ РЅР° РґРІРёР¶РєРµ CryEngine V.
+                                РЎРєРѕСЂРµРµ РІСЃРµРіРѕ РёРіСЂРѕРєРё РЅРёРєРѕРіРґР° РЅРµ СЃРјРѕРіСѓС‚ РїСЂРѕРІРµСЂРёС‚СЊ СЌС‚Рѕ СЃРѕР±СЃС‚РІРµРЅРЅРѕСЂСѓС‡РЅРѕ, РІРµРґСЊ СЃР°Рј РїСЂРѕРµРєС‚, РІРґРѕС…РЅРѕРІР»РµРЅРЅС‹Р№ РёРіСЂР°РјРё S.T.A.L.K.E.R. СЂР°Р·СЂР°Р±Р°С‚С‹РІР°РµС‚СЃСЏ РЅР° РёРіСЂРѕРІРѕРј РґРІРёР¶РєРµ Vostok Engine, РѕРґРЅР°РєРѕ, РІСЃРµРіРґР° РёРЅС‚РµСЂРµСЃРЅРѕ РІР·РіР»СЏРЅСѓС‚СЊ, РєР°Рє РІС‹РіР»СЏРґРµР»Рё Р±С‹ РёРіСЂС‹, РґР°Р¶Рµ СЃР°РјС‹Рµ СЃРѕРІСЂРµРјРµРЅРЅС‹Рµ, РµСЃР»Рё Р±С‹ РѕРЅРё Р±С‹Р»Рё РІРѕСЃСЃРѕР·РґР°РЅС‹ РЅР° СЃРѕРІРµСЂС€РµРЅРЅРѕ РґСЂСѓРіРёС… РґРІРёР¶РєР°С….
                             </b>
                         </p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="images/234541_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">В Crossout появились новые враги и новые режимы</b></p>
+                        <p><b style="color:yellow;font-size:20px;">Р’ Crossout РїРѕСЏРІРёР»РёСЃСЊ РЅРѕРІС‹Рµ РІСЂР°РіРё Рё РЅРѕРІС‹Рµ СЂРµР¶РёРјС‹</b></p>
 
-                        <p style="margin-top:20px;margin-bottom:50px;"><b>В PvE режиме «Оборона рубежа» игрокам предстоит отбивать у захватчиков нефтяную вышку. Однако, до нее сначала нужно добраться. Во время пути геймеров будут атаковать бандиты, а уже на финишной прямой каждому предстоит выдержать несколько волн противников и огонь из стационарных турелей. Деактивированные турели можно будет починить и направить уже против врагов. Автоматические пушки станут ценным союзником в бою против бандитов, которые будут защищать вышку, до конца.
+                        <p style="margin-top:20px;margin-bottom:50px;"><b>Р’ PvE СЂРµР¶РёРјРµ В«РћР±РѕСЂРѕРЅР° СЂСѓР±РµР¶Р°В» РёРіСЂРѕРєР°Рј РїСЂРµРґСЃС‚РѕРёС‚ РѕС‚Р±РёРІР°С‚СЊ Сѓ Р·Р°С…РІР°С‚С‡РёРєРѕРІ РЅРµС„С‚СЏРЅСѓСЋ РІС‹С€РєСѓ. РћРґРЅР°РєРѕ, РґРѕ РЅРµРµ СЃРЅР°С‡Р°Р»Р° РЅСѓР¶РЅРѕ РґРѕР±СЂР°С‚СЊСЃСЏ. Р’Рѕ РІСЂРµРјСЏ РїСѓС‚Рё РіРµР№РјРµСЂРѕРІ Р±СѓРґСѓС‚ Р°С‚Р°РєРѕРІР°С‚СЊ Р±Р°РЅРґРёС‚С‹, Р° СѓР¶Рµ РЅР° С„РёРЅРёС€РЅРѕР№ РїСЂСЏРјРѕР№ РєР°Р¶РґРѕРјСѓ РїСЂРµРґСЃС‚РѕРёС‚ РІС‹РґРµСЂР¶Р°С‚СЊ РЅРµСЃРєРѕР»СЊРєРѕ РІРѕР»РЅ РїСЂРѕС‚РёРІРЅРёРєРѕРІ Рё РѕРіРѕРЅСЊ РёР· СЃС‚Р°С†РёРѕРЅР°СЂРЅС‹С… С‚СѓСЂРµР»РµР№. Р”РµР°РєС‚РёРІРёСЂРѕРІР°РЅРЅС‹Рµ С‚СѓСЂРµР»Рё РјРѕР¶РЅРѕ Р±СѓРґРµС‚ РїРѕС‡РёРЅРёС‚СЊ Рё РЅР°РїСЂР°РІРёС‚СЊ СѓР¶Рµ РїСЂРѕС‚РёРІ РІСЂР°РіРѕРІ. РђРІС‚РѕРјР°С‚РёС‡РµСЃРєРёРµ РїСѓС€РєРё СЃС‚Р°РЅСѓС‚ С†РµРЅРЅС‹Рј СЃРѕСЋР·РЅРёРєРѕРј РІ Р±РѕСЋ РїСЂРѕС‚РёРІ Р±Р°РЅРґРёС‚РѕРІ, РєРѕС‚РѕСЂС‹Рµ Р±СѓРґСѓС‚ Р·Р°С‰РёС‰Р°С‚СЊ РІС‹С€РєСѓ, РґРѕ РєРѕРЅС†Р°.
 
-Также в игре появилась карта для PvE «Очистительный завод». Сообщается, что на территории разрушенного химзавода, где ранее было поселение Мусорщиков, появился очень ценный артефакт. Игроки смогут выбрать один из двух путей к нему. Короткий, но опасный путь по затопленным проездам, либо длинный, по которому придется сделать большой крюк вокруг всей территории завода. Также и в самом поселении будут два входа. Нижний — затопленный водой и верхний — который проходит по трубам, с которых любой может сорваться. Причем они оба заминированы и в любой момент могут нагрянуть рейдеры. Однако, сообщается, что несмотря на сложный путь — награда будет достойной.</b></p>
+РўР°РєР¶Рµ РІ РёРіСЂРµ РїРѕСЏРІРёР»Р°СЃСЊ РєР°СЂС‚Р° РґР»СЏ PvE В«РћС‡РёСЃС‚РёС‚РµР»СЊРЅС‹Р№ Р·Р°РІРѕРґВ». РЎРѕРѕР±С‰Р°РµС‚СЃСЏ, С‡С‚Рѕ РЅР° С‚РµСЂСЂРёС‚РѕСЂРёРё СЂР°Р·СЂСѓС€РµРЅРЅРѕРіРѕ С…РёРјР·Р°РІРѕРґР°, РіРґРµ СЂР°РЅРµРµ Р±С‹Р»Рѕ РїРѕСЃРµР»РµРЅРёРµ РњСѓСЃРѕСЂС‰РёРєРѕРІ, РїРѕСЏРІРёР»СЃСЏ РѕС‡РµРЅСЊ С†РµРЅРЅС‹Р№ Р°СЂС‚РµС„Р°РєС‚. РРіСЂРѕРєРё СЃРјРѕРіСѓС‚ РІС‹Р±СЂР°С‚СЊ РѕРґРёРЅ РёР· РґРІСѓС… РїСѓС‚РµР№ Рє РЅРµРјСѓ. РљРѕСЂРѕС‚РєРёР№, РЅРѕ РѕРїР°СЃРЅС‹Р№ РїСѓС‚СЊ РїРѕ Р·Р°С‚РѕРїР»РµРЅРЅС‹Рј РїСЂРѕРµР·РґР°Рј, Р»РёР±Рѕ РґР»РёРЅРЅС‹Р№, РїРѕ РєРѕС‚РѕСЂРѕРјСѓ РїСЂРёРґРµС‚СЃСЏ СЃРґРµР»Р°С‚СЊ Р±РѕР»СЊС€РѕР№ РєСЂСЋРє РІРѕРєСЂСѓРі РІСЃРµР№ С‚РµСЂСЂРёС‚РѕСЂРёРё Р·Р°РІРѕРґР°. РўР°РєР¶Рµ Рё РІ СЃР°РјРѕРј РїРѕСЃРµР»РµРЅРёРё Р±СѓРґСѓС‚ РґРІР° РІС…РѕРґР°. РќРёР¶РЅРёР№ вЂ” Р·Р°С‚РѕРїР»РµРЅРЅС‹Р№ РІРѕРґРѕР№ Рё РІРµСЂС…РЅРёР№ вЂ” РєРѕС‚РѕСЂС‹Р№ РїСЂРѕС…РѕРґРёС‚ РїРѕ С‚СЂСѓР±Р°Рј, СЃ РєРѕС‚РѕСЂС‹С… Р»СЋР±РѕР№ РјРѕР¶РµС‚ СЃРѕСЂРІР°С‚СЊСЃСЏ. РџСЂРёС‡РµРј РѕРЅРё РѕР±Р° Р·Р°РјРёРЅРёСЂРѕРІР°РЅС‹ Рё РІ Р»СЋР±РѕР№ РјРѕРјРµРЅС‚ РјРѕРіСѓС‚ РЅР°РіСЂСЏРЅСѓС‚СЊ СЂРµР№РґРµСЂС‹. РћРґРЅР°РєРѕ, СЃРѕРѕР±С‰Р°РµС‚СЃСЏ, С‡С‚Рѕ РЅРµСЃРјРѕС‚СЂСЏ РЅР° СЃР»РѕР¶РЅС‹Р№ РїСѓС‚СЊ вЂ” РЅР°РіСЂР°РґР° Р±СѓРґРµС‚ РґРѕСЃС‚РѕР№РЅРѕР№.</b></p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="images/254091_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">Опубликован первый трейлер новой пустынной карты в PUBG</b></p>
+                        <p><b style="color:yellow;font-size:20px;">РћРїСѓР±Р»РёРєРѕРІР°РЅ РїРµСЂРІС‹Р№ С‚СЂРµР№Р»РµСЂ РЅРѕРІРѕР№ РїСѓСЃС‚С‹РЅРЅРѕР№ РєР°СЂС‚С‹ РІ PUBG</b></p>
                         <p style="margin-top:20px;margin-bottom:28px;">
                             <b>
-                                На TGA 2017 студия Bluehole представила новый трейлер своего феноменально-успешного проекта Playerunknown's Battlegrounds. В ролике разработчики отчитались о своих успехах за 2017 год, и показали динамичный геймплей в новом пустынном регионе Miramar.
-                                В новом ролике авторы игры Playerunknown's Battlegrounds показали динамичные схватки, которые будут происходить уже через пару недель на новой локации в игре PUBG. Геймеров ждут заброшенные пустынные здания, горячие автомобильные преследования и перестрелки, а также множество новых тактик и зрелищных моментов, которые гарантирует новая местность.
+                                РќР° TGA 2017 СЃС‚СѓРґРёСЏ Bluehole РїСЂРµРґСЃС‚Р°РІРёР»Р° РЅРѕРІС‹Р№ С‚СЂРµР№Р»РµСЂ СЃРІРѕРµРіРѕ С„РµРЅРѕРјРµРЅР°Р»СЊРЅРѕ-СѓСЃРїРµС€РЅРѕРіРѕ РїСЂРѕРµРєС‚Р° Playerunknown's Battlegrounds. Р’ СЂРѕР»РёРєРµ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРё РѕС‚С‡РёС‚Р°Р»РёСЃСЊ Рѕ СЃРІРѕРёС… СѓСЃРїРµС…Р°С… Р·Р° 2017 РіРѕРґ, Рё РїРѕРєР°Р·Р°Р»Рё РґРёРЅР°РјРёС‡РЅС‹Р№ РіРµР№РјРїР»РµР№ РІ РЅРѕРІРѕРј РїСѓСЃС‚С‹РЅРЅРѕРј СЂРµРіРёРѕРЅРµ Miramar.
+                                Р’ РЅРѕРІРѕРј СЂРѕР»РёРєРµ Р°РІС‚РѕСЂС‹ РёРіСЂС‹ Playerunknown's Battlegrounds РїРѕРєР°Р·Р°Р»Рё РґРёРЅР°РјРёС‡РЅС‹Рµ СЃС…РІР°С‚РєРё, РєРѕС‚РѕСЂС‹Рµ Р±СѓРґСѓС‚ РїСЂРѕРёСЃС…РѕРґРёС‚СЊ СѓР¶Рµ С‡РµСЂРµР· РїР°СЂСѓ РЅРµРґРµР»СЊ РЅР° РЅРѕРІРѕР№ Р»РѕРєР°С†РёРё РІ РёРіСЂРµ PUBG. Р“РµР№РјРµСЂРѕРІ Р¶РґСѓС‚ Р·Р°Р±СЂРѕС€РµРЅРЅС‹Рµ РїСѓСЃС‚С‹РЅРЅС‹Рµ Р·РґР°РЅРёСЏ, РіРѕСЂСЏС‡РёРµ Р°РІС‚РѕРјРѕР±РёР»СЊРЅС‹Рµ РїСЂРµСЃР»РµРґРѕРІР°РЅРёСЏ Рё РїРµСЂРµСЃС‚СЂРµР»РєРё, Р° С‚Р°РєР¶Рµ РјРЅРѕР¶РµСЃС‚РІРѕ РЅРѕРІС‹С… С‚Р°РєС‚РёРє Рё Р·СЂРµР»РёС‰РЅС‹С… РјРѕРјРµРЅС‚РѕРІ, РєРѕС‚РѕСЂС‹Рµ РіР°СЂР°РЅС‚РёСЂСѓРµС‚ РЅРѕРІР°СЏ РјРµСЃС‚РЅРѕСЃС‚СЊ.
                             </b>
                         </p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
                         <img src="images/233176_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">В сеть утекла финальная дата релиза игры God of War</b></p>
+                        <p><b style="color:yellow;font-size:20px;">Р’ СЃРµС‚СЊ СѓС‚РµРєР»Р° С„РёРЅР°Р»СЊРЅР°СЏ РґР°С‚Р° СЂРµР»РёР·Р° РёРіСЂС‹ God of War</b></p>
                         <p style="margin-top:20px;margin-bottom:28px;">
                             <b>
-                                В сети раньше времени появилась дата релиза ожидаемого проекта God of War. На этот раз информация выглядит правдоподобно, ведь утечку допустил сам ритейлер PlayStation Store.
-                                В официальном магазине PlayStation Store ненадолго появилась дата выхода новой части God of War. Если верить этой информации, то долгожданная игра должна поступить в продажу с 22 марта 2018 года. Подобная дата оказалась опубликована на странице проекта преждевременно или по ошибке. Позднее дату убрали. Фанаты успели обратить внимание, что эта дата является особенной, ведь именно в этот день в 2005 году в продажу поступила самая первая часть God of War. Возможно, разработчики не случайно выбрали такой день.
+                                Р’ СЃРµС‚Рё СЂР°РЅСЊС€Рµ РІСЂРµРјРµРЅРё РїРѕСЏРІРёР»Р°СЃСЊ РґР°С‚Р° СЂРµР»РёР·Р° РѕР¶РёРґР°РµРјРѕРіРѕ РїСЂРѕРµРєС‚Р° God of War. РќР° СЌС‚РѕС‚ СЂР°Р· РёРЅС„РѕСЂРјР°С†РёСЏ РІС‹РіР»СЏРґРёС‚ РїСЂР°РІРґРѕРїРѕРґРѕР±РЅРѕ, РІРµРґСЊ СѓС‚РµС‡РєСѓ РґРѕРїСѓСЃС‚РёР» СЃР°Рј СЂРёС‚РµР№Р»РµСЂ PlayStation Store.
+                                Р’ РѕС„РёС†РёР°Р»СЊРЅРѕРј РјР°РіР°Р·РёРЅРµ PlayStation Store РЅРµРЅР°РґРѕР»РіРѕ РїРѕСЏРІРёР»Р°СЃСЊ РґР°С‚Р° РІС‹С…РѕРґР° РЅРѕРІРѕР№ С‡Р°СЃС‚Рё God of War. Р•СЃР»Рё РІРµСЂРёС‚СЊ СЌС‚РѕР№ РёРЅС„РѕСЂРјР°С†РёРё, С‚Рѕ РґРѕР»РіРѕР¶РґР°РЅРЅР°СЏ РёРіСЂР° РґРѕР»Р¶РЅР° РїРѕСЃС‚СѓРїРёС‚СЊ РІ РїСЂРѕРґР°Р¶Сѓ СЃ 22 РјР°СЂС‚Р° 2018 РіРѕРґР°. РџРѕРґРѕР±РЅР°СЏ РґР°С‚Р° РѕРєР°Р·Р°Р»Р°СЃСЊ РѕРїСѓР±Р»РёРєРѕРІР°РЅР° РЅР° СЃС‚СЂР°РЅРёС†Рµ РїСЂРѕРµРєС‚Р° РїСЂРµР¶РґРµРІСЂРµРјРµРЅРЅРѕ РёР»Рё РїРѕ РѕС€РёР±РєРµ. РџРѕР·РґРЅРµРµ РґР°С‚Сѓ СѓР±СЂР°Р»Рё. Р¤Р°РЅР°С‚С‹ СѓСЃРїРµР»Рё РѕР±СЂР°С‚РёС‚СЊ РІРЅРёРјР°РЅРёРµ, С‡С‚Рѕ СЌС‚Р° РґР°С‚Р° СЏРІР»СЏРµС‚СЃСЏ РѕСЃРѕР±РµРЅРЅРѕР№, РІРµРґСЊ РёРјРµРЅРЅРѕ РІ СЌС‚РѕС‚ РґРµРЅСЊ РІ 2005 РіРѕРґСѓ РІ РїСЂРѕРґР°Р¶Сѓ РїРѕСЃС‚СѓРїРёР»Р° СЃР°РјР°СЏ РїРµСЂРІР°СЏ С‡Р°СЃС‚СЊ God of War. Р’РѕР·РјРѕР¶РЅРѕ, СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРё РЅРµ СЃР»СѓС‡Р°Р№РЅРѕ РІС‹Р±СЂР°Р»Рё С‚Р°РєРѕР№ РґРµРЅСЊ.
                             </b>
                         </p>
                     </div>
                     <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12" ; style="margin-bottom:2px;">
                         <img src="images/221939_w180.jpg" style="float:left; width:180px; height:170px;" />
-                        <p><b style="color:yellow;font-size:20px;">Red Dead Redemption, Persona 5, Demon's Souls и Dante's Inferno запустили на PC в разрешении 4K</b></p>
+                        <p><b style="color:yellow;font-size:20px;">Red Dead Redemption, Persona 5, Demon's Souls Рё Dante's Inferno Р·Р°РїСѓСЃС‚РёР»Рё РЅР° PC РІ СЂР°Р·СЂРµС€РµРЅРёРё 4K</b></p>
                         <p style="margin-top:20px;margin-bottom:28px;">
                             <b>
-                                В сети появилось наглядное подтверждение, что современные компьютеры могут запускать консольные эксклюзивы в очень высоком разрешении 4K. При этом все доказательства в виде изображений удалось найти в интернете.
+                                Р’ СЃРµС‚Рё РїРѕСЏРІРёР»РѕСЃСЊ РЅР°РіР»СЏРґРЅРѕРµ РїРѕРґС‚РІРµСЂР¶РґРµРЅРёРµ, С‡С‚Рѕ СЃРѕРІСЂРµРјРµРЅРЅС‹Рµ РєРѕРјРїСЊСЋС‚РµСЂС‹ РјРѕРіСѓС‚ Р·Р°РїСѓСЃРєР°С‚СЊ РєРѕРЅСЃРѕР»СЊРЅС‹Рµ СЌРєСЃРєР»СЋР·РёРІС‹ РІ РѕС‡РµРЅСЊ РІС‹СЃРѕРєРѕРј СЂР°Р·СЂРµС€РµРЅРёРё 4K. РџСЂРё СЌС‚РѕРј РІСЃРµ РґРѕРєР°Р·Р°С‚РµР»СЊСЃС‚РІР° РІ РІРёРґРµ РёР·РѕР±СЂР°Р¶РµРЅРёР№ СѓРґР°Р»РѕСЃСЊ РЅР°Р№С‚Рё РІ РёРЅС‚РµСЂРЅРµС‚Рµ.
 
-                                Примечательно, что Red Dead Redemption, Demon's Souls и Dante's Inferno запустили на персональных компьютерах в честном разрешении 4K благодаря новому рендеру программы RPCS3, которая эмулирует мощности PlayStation 3.Речь идет о самом честном разрешении 4K. Эффект получился такой же, как если бы эти игры запустили на 4K-телевизоре, а PlayStation 3 поддерживала это разрешение в полной мере. Все изображения удалось найти на форуме NeoGAF.
+                                РџСЂРёРјРµС‡Р°С‚РµР»СЊРЅРѕ, С‡С‚Рѕ Red Dead Redemption, Demon's Souls Рё Dante's Inferno Р·Р°РїСѓСЃС‚РёР»Рё РЅР° РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹С… РєРѕРјРїСЊСЋС‚РµСЂР°С… РІ С‡РµСЃС‚РЅРѕРј СЂР°Р·СЂРµС€РµРЅРёРё 4K Р±Р»Р°РіРѕРґР°СЂСЏ РЅРѕРІРѕРјСѓ СЂРµРЅРґРµСЂСѓ РїСЂРѕРіСЂР°РјРјС‹ RPCS3, РєРѕС‚РѕСЂР°СЏ СЌРјСѓР»РёСЂСѓРµС‚ РјРѕС‰РЅРѕСЃС‚Рё PlayStation 3.Р РµС‡СЊ РёРґРµС‚ Рѕ СЃР°РјРѕРј С‡РµСЃС‚РЅРѕРј СЂР°Р·СЂРµС€РµРЅРёРё 4K. Р­С„С„РµРєС‚ РїРѕР»СѓС‡РёР»СЃСЏ С‚Р°РєРѕР№ Р¶Рµ, РєР°Рє РµСЃР»Рё Р±С‹ СЌС‚Рё РёРіСЂС‹ Р·Р°РїСѓСЃС‚РёР»Рё РЅР° 4K-С‚РµР»РµРІРёР·РѕСЂРµ, Р° PlayStation 3 РїРѕРґРґРµСЂР¶РёРІР°Р»Р° СЌС‚Рѕ СЂР°Р·СЂРµС€РµРЅРёРµ РІ РїРѕР»РЅРѕР№ РјРµСЂРµ. Р’СЃРµ РёР·РѕР±СЂР°Р¶РµРЅРёСЏ СѓРґР°Р»РѕСЃСЊ РЅР°Р№С‚Рё РЅР° С„РѕСЂСѓРјРµ NeoGAF.
                             </b>
                         </p>
                     </div>
@@ -145,9 +145,9 @@
     <div class="container-fluid" style="height:50px;margin-top:10px; background:rgba(0, 0, 0, 0.3);text-align:center; padding-top:20px;color:white;">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                Тадра Александр Николаевич
-                ФИТ
-                ПОИБМС - 7
+                РўР°РґСЂР° РђР»РµРєСЃР°РЅРґСЂ РќРёРєРѕР»Р°РµРІРёС‡
+                Р¤РРў
+                РџРћРР‘РњРЎ - 7
             </div>
         </div>
     </div>
