--- a/1/index.html
+++ b/1/index.html
@@ -84,7 +84,7 @@
                 <div style="font-size:25px; font-weight:700; color:white;" class="col-xs-12 col-lg-6 col-md-6 col-sm-6 col-lg-offset-1 col-md-offset-1">
                     Новости
                     <div class="row">
-                        <div class="news col-lg-12 col-sm-12 col-xs-12 col-md-12">
+                        <div class="news" class="col-lg-12 col-sm-12 col-xs-12 col-md-12">
                             <img src="images/254351_w180.jpg" style="float:left;  width:180px; height:170px;" />
                             <p><b style="color:yellow;font-size:20px;">На видео показали, как выглядит игра в стилистике S.T.A.L.K.E.R. на движке CryEngine в 4К</b></p>
                             <p style="margin-top:20px;margin-bottom:28px;">
